test/invalid/baseline/extattr-double.txt
Syntax error at line 1 in extattr-double.widl:
Constructor([Clamp] [Clamp] unsigned long
                    ^ Illegal double extended attribute lists, consider merging them
